// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`processUpload — wire contract > ok:false — 11 error codes with user-facing messages > AUTH: getCurrentUser returns null → { code: AUTH } 1`] = `
{
  "code": "AUTH",
  "error": "認証が必要です",
  "ok": false,
}
`;

exports[`processUpload — wire contract > ok:false — 11 error codes with user-facing messages > EXAM_NOT_FOUND (Branch A — not found): { code: EXAM_NOT_FOUND, error: 選択された試験が見つかりません } 1`] = `
{
  "code": "EXAM_NOT_FOUND",
  "error": "選択された試験が見つかりません",
  "ok": false,
}
`;

exports[`processUpload — wire contract > ok:false — 11 error codes with user-facing messages > EXAM_NOT_FOUND (Branch B — archived): { code: EXAM_NOT_FOUND, error: アーカイブ済の試験には追加できません } 1`] = `
{
  "code": "EXAM_NOT_FOUND",
  "error": "アーカイブ済の試験には追加できません",
  "ok": false,
}
`;

exports[`processUpload — wire contract > ok:false — 11 error codes with user-facing messages > GEMINI_DAILY_LIMIT_EXCEEDED: { code: GEMINI_DAILY_LIMIT_EXCEEDED, details: { current, limit } } 1`] = `
{
  "code": "GEMINI_DAILY_LIMIT_EXCEEDED",
  "details": {
    "current": 5,
    "limit": 5,
  },
  "error": "本日のサービス全体の利用上限に達しました。 明日以降にお試しください。",
  "ok": false,
}
`;

exports[`processUpload — wire contract > ok:false — 11 error codes with user-facing messages > GEMINI_FAILED (Branch B — non-deadline): { code: GEMINI_FAILED, details.rawError, details.sourceDocumentId } 1`] = `
{
  "code": "GEMINI_FAILED",
  "details": {
    "rawError": "flash-503: service unavailable",
    "sourceDocumentId": "sdoc0000-0000-4000-a000-000000000002",
  },
  "error": "混み合っているようです、 少し時間をおいてからお試しください",
  "ok": false,
}
`;

exports[`processUpload — wire contract > ok:false — 11 error codes with user-facing messages > INVALID_INPUT (Branch A — mode-invalid): { code: INVALID_INPUT, error: 投入先が指定されていません } 1`] = `
{
  "code": "INVALID_INPUT",
  "error": "投入先が指定されていません",
  "ok": false,
}
`;

exports[`processUpload — wire contract > ok:false — 11 error codes with user-facing messages > OTHER (file read failure — arrayBuffer throw): { code: OTHER, details.rawError, details.sourceDocumentId } 1`] = `
{
  "code": "OTHER",
  "details": {
    "rawError": "disk read error",
    "sourceDocumentId": "sdoc0000-0000-4000-a000-000000000002",
  },
  "error": "ファイル読み込みに失敗しました",
  "ok": false,
}
`;

exports[`processUpload — wire contract > ok:false — 11 error codes with user-facing messages > PAGE_LIMIT_EXCEEDED (41 images): { code: PAGE_LIMIT_EXCEEDED } 1`] = `
{
  "code": "PAGE_LIMIT_EXCEEDED",
  "error": "1 回のアップロードは合計 40 ページまでです。 ファイルを分けてアップロードしてください",
  "ok": false,
}
`;

exports[`processUpload — wire contract > ok:false — 11 error codes with user-facing messages > QUOTA_EXCEEDED: { code: QUOTA_EXCEEDED, details: { current, limit, requested } } 1`] = `
{
  "code": "QUOTA_EXCEEDED",
  "details": {
    "current": 30,
    "limit": 30,
    "requested": 1,
  },
  "error": "今月の OCR ページ上限に達しました (30/30 ページ使用済、 今回要求 1 ページ)。 来月までお待ちいただくか上位プランへ。",
  "ok": false,
}
`;

exports[`processUpload — wire contract > ok:false — 11 error codes with user-facing messages > SAVE_FAILED (Branch A — cards INSERT/applyOcrTags failure): { code: SAVE_FAILED, details.* } 1`] = `
{
  "code": "SAVE_FAILED",
  "details": {
    "costYen": 7,
    "modelChain": [
      "gemini-2.5-flash",
    ],
    "rawError": "NOT NULL violation in tag_options",
    "sourceDocumentId": "sdoc0000-0000-4000-a000-000000000002",
  },
  "error": "抽出結果の保存に失敗しました",
  "ok": false,
}
`;

exports[`processUpload — wire contract > ok:false — 11 error codes with user-facing messages > SIZE_LIMIT_EXCEEDED (5MB file): { code: SIZE_LIMIT_EXCEEDED } 1`] = `
{
  "code": "SIZE_LIMIT_EXCEEDED",
  "error": "合計サイズは 4 MB までです。 ファイルを分けてアップロードしてください",
  "ok": false,
}
`;

exports[`processUpload — wire contract > ok:false — 11 error codes with user-facing messages > UPLOAD_IN_PROGRESS (advisory lock fails): { code: UPLOAD_IN_PROGRESS } 1`] = `
{
  "code": "UPLOAD_IN_PROGRESS",
  "error": "処理中の OCR があります。完了をお待ちいただくか『試験一覧』で状況をご確認ください。",
  "ok": false,
}
`;

exports[`processUpload — wire contract > ok:true — success data shape > full ProcessResultData snapshot (mode:new, 1 card) 1`] = `
{
  "data": {
    "cards": [
      {
        "id": "card0000-0000-4000-a000-000000000005",
        "optionCount": 2,
        "questionTextSnippet": "What does the contract test verify?",
        "title": "Contract Test Card Title",
      },
    ],
    "cardsExtracted": 1,
    "examId": "exam0000-0000-4000-a000-000000000003",
    "examName": "アップロード 2026-07-06 09:00",
    "modelChain": [
      "gemini-2.5-flash",
    ],
    "ocrCostYen": 7,
    "sourceDocumentId": "sdoc0000-0000-4000-a000-000000000002",
  },
  "ok": true,
}
`;
